# ProAI

./: .replit  clui.py  dataloader.py  gpt.py  main.py  nn.py  pyproject.toml  rnn.py  test.json
data/: finding-our-way.txt  from-toilet-to-cash.txt  little-men-responce.txt  little-men.txt  little-women.txt  me 2.txt  my-bible-version.txt  no-longer-poor.txt  north-and-south.txt  pirates-in-pergamus 2.txt  snake-camel-run.txt  stuff.txt  tale-of-two-cities 2.txt  the-netherby-chase.txt
models/: all10  alphabet5  alphabet6  chat1-new  chat10  chat11  chat15  chat3  chat4  gpt-2l-20in  repeat7  test5
models/GPT-50l-50in/: model.pkl
models/custom_arch-56l-5in/: model.pkl
new_processed_data/: finding-our-way.txt  from-toilet-to-cash.txt  kjv.txt  little-men-responce.txt  little-men.txt  little-women.txt  my-bible-version.txt  no-longer-poor.txt  north-and-south.txt  snake-camel-run.txt  stuff.txt  tale-of-two-cities.txt
proai/: dataloader.py  tokenizer.py
processed_data/: finding-our-way.txt  from-toilet-to-cash.txt  kjv.txt  little-men-responce.txt  little-men.txt  little-women.txt  me.txt  my-bible-version.txt  no-longer-poor.txt  north-and-south.txt  pirates-in-pergamus.txt  snake-camel-run.txt  stuff.txt  tale-of-two-cities.txt  the-netherby-chase.txt
smallset/: x.txt
training_data/: alphabet.json  basic.json  chat.json  math.json  repeat.json  test.json
